# server-private

./: .dockerignore  .env.example  .eslint.config.js  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .graphqlrc.yml  .node-version  .npmrc  .prettierignore  .theme-check.yml  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.rust  babel.config.cjs  buf.gen.yaml  build-cron.mjs  build.mjs  cliff.toml  codegen.ts  config.example.yaml  drizzle.config.ts  eslint.config.mjs  jest.config.ts  lint-staged.config.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  timeline.md  tsconfig.base.json  tsconfig.json  tsconfig.prod.json  tsdoc.json  vitest.config.ts
.github/: CODEOWNERS  codecov.yml  labels.yml  mergify.yml  renovate.json
.github/codeql/: codeql-config.yaml
.github/scripts/: avoid-changelog-ref.py  changelog.js
.github/workflows/: auto-tag.yaml  autofix.yaml  ci.yaml  codacy.yml  codeql.yaml  codeql.yml  next-version.yaml  preview-changelog.yaml  release-docker.yaml  release-github.yaml  release-openapi.yaml  release-rust.yaml  release.yaml  rolling.yaml  todo.yaml  update-common.yaml
.husky/: pre-commit
benchmark/results/: reduce.chart.html
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  oauth.rs  server.rs  template.rs
crates/api/templates/oauth/: authorize.html  error.html
crates/backend/: Cargo.toml  README.md
crates/backend/src/: main.rs
crates/config/: Cargo.toml
crates/cron/: Cargo.toml
crates/cron/src/: context.rs  heartbeat.rs  lib.rs  oauth_cleanup.rs  scheduler.rs  timeline_cache.rs  trending.rs
crates/mq/: Cargo.toml
crates/mq/src/: context.rs  helpers.rs  lib.rs  types.rs
crates/mq/src/topics/: chii_blog_entry.rs  chii_characters.rs  chii_episodes.rs  chii_friends.rs  chii_group_members.rs  chii_group_topics.rs  chii_groups.rs  chii_index.rs  chii_members.rs  chii_persons.rs  chii_subject_fields.rs  chii_subject_revisions.rs  chii_subject_topics.rs  chii_subjects.rs  mod.rs  subject_date.rs
crates/wiki-parser/: Cargo.toml
docs/: rust-migration-plan.md  socket.io.md  timeline.md
drizzle/: README.md  db.ts  index.ts  orm.ts  schema.ts
drizzle/new/: 0000_flaky_bruce_banner.sql  relations.ts  schema.ts
eslint/: index.cjs  index.mjs  no-relative-parent-import.cjs  no-relative-parent-import.cts  no-relative-parent-import.mjs
etc/: base.dockerfile  final.dockerfile  main.dockerfile
event/: blog.ts  character.ts  group.ts  index.ts  notify.ts  person.ts  subject.ts  timeline.ts  type.ts  user.ts
lib/: ajv.ts  auth.ts  cache-keys.ts  cache.ts  comment.ts  config.test.ts  config.ts  const.ts  dam.test.ts  dam.ts  error.ts  errors.ts  images.ts  infobox.ts  kafka.ts  like.test.ts  like.ts  logger.ts  main.ts  notify.ts  orm.test.ts  orm.ts  pre-handler.ts  prisma.ts  redis.ts  response.ts  scope.ts  sentry.ts  server.test.ts  server.ts  subject.test.ts  subject.ts  swagger.html  tag.ts  topic.test.ts  topic.ts  wiki.ts
lib/__snapshots__/: like.test.ts.snap  orm.test.ts.snap  topic.test.ts.snap
lib/auth/: acl.ts  authcode.test.ts  authcode.ts  index.test.ts  index.ts  permission.ts  rule.ts  session.test.ts  session.ts
lib/blog/: cache.ts
lib/character/: cache.ts
lib/graphql/: context.ts  schema.gen.graphql  schema.graphql  schema.ts  typeDefs.globals.ts  typeDefs.ts  ui.ts
lib/group/: cache.ts  consts.ts  type.ts  utils.ts
lib/image/: base.ts  error.ts  fs.test.ts  fs.ts  index.ts  s3.ts  sftp.ts
lib/index/: cache.ts  stats.ts  types.ts  utils.ts
lib/openapi/: index.ts  tag.ts
lib/orm/: index.ts  orm.test.ts  transformer.ts
lib/person/: cache.ts  infobox.ts  photo-type.ts  photo.ts  type.ts  utils.ts
lib/rest/: index.test.ts  index.ts  me.ts  readme.md  swagger.ts  type.ts
lib/rev/: common.ts  ep.test.ts  ep.ts  type.ts  utils.ts
lib/search/: character.ts  client.ts  person.ts  subject.ts
lib/services/: base.ts  imaginary.ts  turnstile.test.ts  turnstile.ts
lib/static/: editor.js
lib/subject/: _platform.ts  cache.ts  collection.ts  date.test.ts  date.ts  ep.test.ts  ep.ts  index.test.ts  index.ts  infobox.ts  platform.ts  type.ts  utils.ts
lib/templates/: editor.liquid  index.hbs  layout.hbs  layout.liquid  login.hbs  login.liquid  login2.hbs  user.hbs  user.liquid
lib/timeline/: ajv.ts  cache.ts  cat.ts  image.ts  inbox.ts  index.test.ts  index.ts  item.ts  kafka.ts  memo.ts  sse.ts  type.ts  types.ts  user.ts  writer.test.ts  writer.ts
lib/topic/: display.ts  index.test.ts  index.ts  state.ts  topic.ts  type.ts  utils.ts
lib/torm/: index.ts
lib/trending/: cache.ts  subject.ts  topic.ts  type.ts
lib/types/: common.ts  convert.ts  examples.ts  fetcher.ts  index.ts  req.ts  res.ts  user.ts  util.ts
lib/user/: cache.ts  perm.test.ts  perm.ts  privacy.test.ts  privacy.ts  stats.ts  utils.ts
lib/utils/: date.ts  index.test.ts  index.ts  proxy.ts
patches/: @fastify__error@3.2.0.patch  fastify-socket.io.patch  got@13.0.0.patch  parse-duration@1.0.3.patch
prisma/: schema.prisma
protocol/mq/: notify.proto
routes/: index.test.ts  index.ts  res.ts  schemas.ts  swagger.ts  type.ts
routes/__snapshots__/: index.test.ts.snap
routes/admin/: cron.ts  ep.ts  index.ts
routes/demo/: editor.ts  index.ts
routes/hooks/: pre-handler.ts  rate-limit.ts
routes/m2/: index.ts
routes/oauth/: index.test.ts  index.ts
routes/private/: index.ts
routes/public/: index.ts
routes/routes/: me.ts
scripts/: build-common.cjs  build-common.mjs  export-openapi.ts  process-timeline.ts
static/: editor.js  swagger.html
static/style/: mobile.css
style/: mobile.less  variables.less
tasks/: heartbeat.ts  oauth.ts  timeline.test.ts  timeline.ts  trending.ts
templates/: editor.liquid  layout.liquid  login.liquid  turnstile.liquid  upload-cover.liquid  user.liquid
templates/admin/: covers.liquid  episode-history.liquid  index.liquid
templates/m/: group-topic.liquid  index.liquid  layout.liquid  readme.md
tests/: auth.test.ts  ioredis-mock.d.ts  server.test.ts  setup.ts  tsconfig.json  utils.test.ts  utils.ts
(+251 files in other folders)
