[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bb8 = "0.9"
bb8-redis = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
spdlog-rs = { version = "0.5", features = ["serde_json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
tokio-cron-scheduler = "0.15"

bangumi-api = { path = "crates/api" }
bangumi-config = { path = "crates/config" }
bangumi-cron = { path = "crates/cron" }
bangumi-mq = { path = "crates/mq" }
