[package]
name = "bangumi-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
bangumi-config = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
md5 = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
spdlog-rs = { workspace = true }
tera = "1.20"
tokio = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tower = "=0.5.3"
