[package]
name = "bangumi-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bangumi-config = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
spdlog-rs = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
