[package]
name = "bangumi-mq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bangumi-config = { workspace = true }
bangumi-wiki-parser = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
chrono = { workspace = true }
rdkafka = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spdlog-rs = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
